# tmp-companion

./: .coderabbit.yaml  .gitignore  .prettierignore  .releaserc.json  CLAUDE.md  CONTRIBUTING.md  INTEROP.md  LICENSE  NOTICE  README.md  SECURITY.md  commitlint.config.js  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/skills/coderabbit/: SKILL.md
.claude/skills/tmp-companion-catalog/: SKILL.md
.claude/skills/tmp-companion-data-model/: SKILL.md
.claude/skills/tmp-companion-device-ops/: SKILL.md
.claude/skills/tmp-companion-frontend/: SKILL.md
.claude/skills/tmp-companion-protocol/: SKILL.md
.claude/skills/tmp-companion-write-safety/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arm-auto-merge.yml  ci.yml  dependabot-auto-approve.yml  release-backstop.yml  release.yml
.husky/: pre-commit  pre-push
docs/: index.html
e2e/: bridge-client.js  playwright.config.ts  playwright.online.config.ts
e2e/fixtures/: scenario-loudness.json  scenario-presets.json  scenario.ts  test.ts
e2e/fixtures/showcase/: showcase.json
e2e/showcase/: playwright.showcase.config.ts  showcase.spec.ts
e2e/specs/: copy.spec.ts  doctor-apply.onceoff.spec.ts  doctor-apply.online.spec.ts  doctor.spec.ts  level-defaults.spec.ts  level-rerun.spec.ts  level.spec.ts  pedal-fiasco.spec.ts  songs.spec.ts
notes/: block-copy.md  doctor-calibration.md  doctor.md  e2e-test-plan.md  leveling.md  native-window.md  overview.md  perf.md  pickup-topologies.md  protocol.md  songs-setlists.md  user-journeys.md  write-safety.md
scripts/: bake_icon.py  check-doc-anchors.sh  device-lock.sh  e2e.sh  extract_cab_covering.py  gates.sh  hw-e2e.sh  latest-json.mjs  leak-guard.sh  release-build.sh
scripts/claude-hooks/: block-bypass.sh  gate-pr.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: audio.rs  audiograph.rs  audition.rs  backup.rs  backup_read.rs  backup_read_tests.rs  blockcaps.rs  blocklib.rs  bootstrap.rs  bulk_cmd.rs  bulkrun.rs  device_gate.rs  dock.rs  doctor.rs  e2e_server.rs  e2e_server_tests.rs  footswitch.rs  hid.rs  ir.rs  leveller.rs  lib.rs  library.rs  lint.rs  lufs.rs  main.rs  migration.rs  monitor.rs  paramedit.rs  preset_io.rs  presetmeta.rs  profiles.rs  proto.rs  psd.rs  rename.rs  replace_inplace.rs  saved_blocks.rs  scenes.rs  search.rs  session.rs  sim_device.rs  (+4 more)
src-tauri/src/commands/: bulk_replace.rs  copy_apply.rs  copy_e2e_tests.rs  device.rs  doctor.rs  doctor_tests.rs  edit_tools.rs  held_edit.rs  level_footswitch.rs  level_preset.rs  level_scenes.rs  library.rs  media.rs  migration.rs  mod.rs  presets.rs  setlists.rs  settings.rs  songs.rs  support.rs
src-tauri/src/probe_api/: analyze.rs  doctor_calib.rs  doctor_defects.rs  doctor_inject.rs  doctor_iso_ab.rs  doctor_window_ab.rs  fs_level.rs  ftsw.rs  insert.rs  inspect.rs  level.rs  mod.rs  overlay_ab.rs  overlay_ab_tests.rs  replace.rs  scene_bench.rs  scene_jobs.rs  scene_jobs_tests.rs  scene_level.rs  scene_scan.rs  seed_scenario.rs  setlists.rs  slot_read.rs  slot_write.rs  songs.rs  stimulus.rs
src/__tests__/: ActiveSignalChainView.test.tsx  App.test.tsx  Band.test.tsx  BlockArt.test.tsx  BugReportDialog.test.tsx  CalibrationReadout.test.tsx  CatalogView.test.tsx  CopyHappyPath.test.tsx  CopyView.test.tsx  DSPrimitives.test.tsx  DeviceStatus.test.tsx  DialogEscape.test.tsx  DoctorResults.test.tsx  DoctorRun.test.ts  DoctorRunFooter.test.tsx  DoctorView.test.tsx  ErrorBoundary.test.tsx  FirmwareGate.test.tsx  InstrumentNudge.test.tsx  LevelHappyPath.test.tsx  LevelView.test.tsx  LevelingWizardBackdrop.test.tsx  MatchCard.test.tsx  PresetList.test.tsx  RunBody.test.tsx  RunPieces.test.tsx  SettingsView.test.tsx  SetupBodyCalibrationBanner.test.tsx  SetupPieces.test.tsx  SignalChainArtFields.test.tsx  SignalChainCombo.test.tsx  SignalChainLaneBracket.test.tsx  SignalChainView.test.tsx  SlotLabel.test.tsx  SongsTablePieces.test.tsx  SongsView.test.tsx  SummaryRestore.test.tsx  SummaryTruePeak.test.tsx  SupportSection.test.tsx  buildLevelJob.test.ts  (+19 more)
src/lib/: connectError.ts  firmware.ts  format.ts  gates.ts  invoke.ts  liveEvents.ts  log.ts  reportEndpoint.ts  scheduleLibraryScan.ts  types.ts  updater.ts  useAutoAdvance.ts  useDeviceLoad.ts  usePickedRows.ts  useUpdater.ts
src/models/: block-classification.json  block-classification.md  blockArt.ts  cabCovering.generated.ts  catalog.ts  cpu.ts  lineage.ts  model-cpu.json  tmp-model-guide.json
src/models/blockArtCatalog/: bass.ts  cabBass.ts  cabGuitar.ts  combo.ts  delay.ts  drive.ts  dyn.ts  eq.ts  filter.ts  fw18.ts  halfstack.ts  index.ts  mic.ts  mod.ts  pitch.ts  preamp.ts  reverb.ts  synth.ts  types.ts  util.ts
src/theme/: ThemeContext.tsx  ThemeProvider.tsx  styles.ts  tokens.ts
src/ui/: ActionBar.tsx  ApplyToBar.tsx  BackupAckLabel.tsx  BlockArt.tsx  ConfirmBar.tsx  DeviceStatus.tsx  Dialog.tsx  Dot.tsx  ErrorBoundary.tsx  Icon.tsx  LiveReadout.tsx  LiveVU.tsx  Menu.tsx  Meter.tsx  PaneEmpty.tsx  PresetOptionRow.tsx  ProgressBar.tsx  Rail.tsx  ReadingPill.tsx  RunRow.tsx  SetupGroupHeader.tsx  Skeleton.tsx  SlotLabel.tsx  Spinner.tsx  Tag.tsx  UpdateOverlay.tsx  dialogContext.ts  iconNames.ts  primitives.tsx
src/ui/blockart/: amps.tsx  ampsCombo.tsx  ampsComboMesaRoland.tsx  ampsHeadBoutique.tsx  ampsHeadBritish.tsx  ampsHeadFender.tsx  ampsHeadModern.tsx  blockColors.generated.ts  cabs.tsx  forms.tsx  formsPedal.tsx  formsRack.tsx  micBodiesCondenser.tsx  micBodiesDynamic.tsx  mics.tsx  parts.tsx  partsCloth.tsx  (+15 more)
src/views/: ActiveSignalChainView.tsx  BugReportDialog.tsx  CatalogView.tsx  Disclaimer.tsx  EmptyState.tsx  FirmwareGate.tsx  LoadErrorPane.tsx  PageNotice.tsx  PresetList.tsx  SignalChainView.tsx  sendReport.ts  stripExpand.ts
(+91 files in other folders)
